# holomemory

./: .gitignore  LICENSE  PRODUCT.md  README.md  feedback.md
backend/: pyproject.toml
backend/app/: cli.py  config.py  db.py  demo_seed.py  main.py  models.py  schemas.py  seed.py
backend/app/api/: playground_routes.py  routes.py
backend/app/memory/: encoder.py  experiments.py  hrr.py  keyword.py  retrieval.py
backend/app/services/: memory_service.py  stats_service.py
backend/tests/: conftest.py  test_api.py  test_hrr.py  test_retrieval.py
docs/: api.md  architecture.md  claude-ui-redesign-brief.md  demo-script.md  hrr-primer.md
examples/: benchmark_queries.json  seed_memories.json
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
frontend/app/about/: page.tsx
frontend/app/experiments/: layout.tsx  page.tsx
frontend/app/memories/: layout.tsx  page.tsx
frontend/app/playground/: page.tsx
frontend/components/: metric-card.tsx  providers.tsx  site-footer.tsx  top-nav.tsx
frontend/components/explainer/: algebra-section.tsx  applied-intro.tsx  comparison-section.tsx  cta-section.tsx  encode-block.tsx  fft-binding.tsx  hero-demo.tsx  hero.tsx  recall-block.tsx  trust-block.tsx  unbind-section.tsx  what-section.tsx  why-section.tsx
frontend/components/playground/: demo-script-modal.tsx  distortion-lab.tsx  (+8 more)
frontend/lib/: api.ts  demo-data.ts  seo.ts  types.ts  use-force-layout.ts
scripts/: dev.sh  dump_tokens.py  dump_vectors.py  parity_check.mjs  screenshot.mjs
(+11 files in other folders)
