[project]
name = "holomemory"
version = "0.1.0"
description = "HRR-style holographic agent memory system"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "sqlalchemy==2.0.36",
    "numpy==2.2.1",
    "httpx==0.28.1",
    "PyStemmer==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
